# sparrow

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  build.sh  docker-compose.dev.yml  docker-compose.yml  mise.toml  nginx.conf  rust-toolchain.toml  test-docker.sh
client/: astro.config.mjs  bun.lockb  mise.toml  package-lock.json  package.json  tsconfig.json
client/app/: introduction.js
client/src/components/: Simulation.svelte  SimulationInput.svelte  SimulationPanel.svelte
client/src/components/simulation/: SimulationCanvas.svelte  SimulationRoot.svelte
client/src/components/ui/: SectionHeader.svelte
client/src/layouts/: Layout.astro
client/src/libs/: types.ts
client/src/libs/canvas/: SimulationEngine.ts
client/src/pages/: index.astro
client/src/store/: SimulationConfigStore.svelte.ts
client/src/styles/: global.css
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  genetic_algorithm.rs  individual.rs  lib.rs  selection.rs
libs/genetic-algorithm/src/crossover/: core.rs  mod.rs  uniform.rs
libs/genetic-algorithm/src/mutation/: core.rs  gaussian.rs  mod.rs
libs/neural-network/src/: layer.rs  lib.rs  network.rs  neuron.rs
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/src/: animal.rs  lib.rs  prelude.rs  simulation.rs  world.rs
libs/simulation/src/: animal.rs  food.rs  lib.rs  prelude.rs  simulation.rs  world.rs
simple/: index.html  mise.toml  package.json  tsconfig.json  vite.config.ts
simple/src/: main.ts  style.css
(+3 files in other folders)
